--- a/index.html
+++ b/index.html
@@ -1,8 +1,115 @@
 <html>
-  <head>
-    <meta content="text/html;charset=utf-8" http-equiv="Content-Type"/>
-  </head>
-  <body>
-    <p>This is a webssh client!</p>
-  </body>
+
+<head>
+  <meta content="text/html;charset=utf-8" http-equiv="Content-Type" />
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 20px;
+    }
+
+    label {
+      display: block;
+      margin-bottom: 5px;
+      font-weight: bold;
+    }
+
+    h2 {
+      margin-top: 0;
+      margin-bottom: 20px;
+    }
+
+    input {
+      width: 100%;
+      padding: 8px;
+      border: 1px solid #ccc;
+      border-radius: 4px;
+      box-sizing: border-box;
+    }
+
+    button {
+      padding: 9px 20px;
+      background-color: #4CAF50;
+      color: white;
+      border: none;
+      border-radius: 4px;
+      cursor: pointer;
+      font-weight: bold;
+    }
+
+    button:hover {
+      background-color: #45a049;
+    }
+
+    .container {
+      border: 1px solid #ccc;
+      border-radius: 5px;
+      padding: 20px;
+      margin-bottom: 20px;
+    }
+
+    .row {
+      display: flex;
+      margin-bottom: 15px;
+      width: 100%;
+    }
+
+    .websocket-row {
+      display: flex;
+      align-items: flex-end;
+    }
+
+    .websocket-address {
+      flex: 1;
+      margin-right: 15px;
+    }
+
+    .input-group {
+      flex: 1;
+      margin-right: 15px;
+    }
+
+    .input-group:last-child {
+      margin-right: 0;
+    }
+  </style>
+</head>
+
+<body>
+  <h2>WebSSH Client</h2>
+
+  <div class="container">
+    <div class="row">
+      <div class="input-group">
+        <label for="ssh-address">SSH Address</label>
+        <input type="text" id="ssh-address" placeholder="e.g. 192.168.0.1">
+      </div>
+      <div class="input-group">
+        <label for="ssh-port">SSH Port</label>
+        <input type="text" id="ssh-port" placeholder="e.g. 22" value="22">
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="input-group">
+        <label for="ssh-username">SSH Username</label>
+        <input type="text" id="ssh-username" placeholder="Username">
+      </div>
+      <div class="input-group">
+        <label for="ssh-password">SSH Password</label>
+        <input type="password" id="ssh-password" placeholder="Password">
+      </div>
+    </div>
+
+    <div class="row websocket-row">
+      <div class="input-group websocket-address">
+        <label for="websocket-address">WebSocket Address</label>
+        <input type="text" id="websocket-address" placeholder="ws://example.com:8080" value="ws://localhost:19198">
+      </div>
+      <button id="connect-button">Connect</button>
+    </div>
+
+  </div>
+</body>
+
 </html>
